--- a/doc/doxygen.css
+++ b/doc/doxygen.css
@@ -12,11 +12,13 @@ p, div, dl {
 	color:#3E3E3E;
 }
 
+/*
 div.contents p {
 	
 	font-family:Monaco, courier;
 	
 }
+*/
 
 /* @group Heading Levels */
 
