beefing up the homepage

--- a/style.css
+++ b/style.css
@@ -5,25 +5,28 @@ body {
 }
 
 table.canopy {
+    table-layout: fixed;
     background-color: #ffffff;
-    width=50%;
+    width:70%;
     margin-top:15%;
     margin-left:auto;
     margin-right:auto;
-    /* border: 1px solid #eef0e3;*/
+    border: 0px; /*1px solid #eef0e3;*/
     padding: 25px;
     vertical-align: middle;
 }    
 
 a {
-    text-decoration:none;
-    color:#64747c;
+    /*text-decoration:none;*/
+    color:#85a363;
 }
 
-td.links { 
-    color: #64747c;
-    font-size: 1.1em;
-    font-weight: bold;
+td.logo { 
+    background-color: #ffffff;
+    vertical-align: top;
+    text-align: right;
+    padding: 35px 0px 0px 0px;
+    width: 20%;
 }
 
 td.content {
@@ -31,5 +34,21 @@ td.content {
     text-align: left;
     margin: 15px;
     border: 10px solid #ffffff;
+    width: 80%;
 }
 
+.paragraph {
+    background-color: #ffffff;
+    text-align: left;
+    margin: 15px;
+    border: 10px solid #ffffff;
+}
+.heading1 {
+    color: #64747c;
+    font-size: 1.1em;
+    font-weight: bold;
+}
+
+.text {
+    margin-top: 15px;
+}
