--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     font-family: sans-serif;
     background-color: #ffffff;
     color: #64747c;
+    font-size: 0.9em;
 }
 
 table.canopy {
